<resources>
    <string name="app_green_light">green_light</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="login_driver_title">Driver Login</string>
    <string name="login_user_title">User Login</string>
    <string name="login_subtitle">Login to continue</string>
    <string name="driver">Driver</string>
    <string name="have_no_account">Have no account? %s</string>
    <string name="have_an_account">Already have an account? %s</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="armada_setting">Armada Setting</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="get_ticket">Get Ticket</string>
    <string name="choose_departure_time">Choose departure time</string>
    <string name="choose_departure_date">Choose departure date</string>
    <string name="ticket_price">Ticket price</string>
    <string name="seat_amount">Seat amount</string>
    <string name="note">Note</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="car">Car</string>
    <string name="departure_time">Departure Time</string>
    <string name="departure_date">Departure Date</string>
    <string name="seat_available">Seat Available</string>
    <string name="choose_pick_up_location">Choose Pick Up Location</string>
    <string name="change_password">Change Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="armada_class">Armada class</string>
    <string name="group">Group</string>
    <string name="logout">Logout</string>
    <string name="failed">Failed… Please try again later</string>
    <string name="update">Update</string>
    <string name="update_success">Successfully Updated</string>
    <string name="add_success">Successfully Added</string>
    <string name="amount_seat_booked">%1$s seat booked</string>
    <string name="register_success">Registered Successfully</string>
    <string name="password_did_not_match">Password did not match</string>
    <string name="password_changed">Password changed successfully</string>
    <string name="update_pickup_location">Update Pickup Location</string>
    <string name="amount_of_seat_available">%1$s of %2$s seat available</string>
    <string name="order_ticket_success">Successfully order ticket</string>
    <string name="alert_permission_required">Permission required for showing location</string>
    <string name="current_location_not_found">Current location not found</string>
    <string name="address_not_found">Address not found</string>
    <string name="confirm_pickup_location">Confirm Pickup Location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_ticket">Order Ticket</string>
    <string name="detail_information">Detail Information</string>
    <string name="route_message">From %s to %s</string>
    <string name="route">Route</string>
    <string name="depart_from">Depart from</string>
    <string name="welcome">Welcome,</string>
    <string name="armada_detail">Armada Detail</string>
    <string name="account_information">Account Information</string>
    <string name="passenger_detail">Passenger Detail</string>
    <string name="driver_detail">Driver Detail</string>
    <string name="fill_your_data">Fill Your Data</string>
    <string name="order_code">Order Code</string>
    <string name="open_pickup_location">Open Pickup Location</string>
    <string name="update_ticket_order">Update Ticket Order</string>
    <string name="seat_booked">Seat Booked</string>
    <string name="date_range">Date Range</string>
    <string name="date_range_message">%s to %s</string>

    <string-array name="city_list">
        <item>Pekanbaru</item>
        <item>Rengat</item>
    </string-array>
</resources>