<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/aciv_home_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aciv_home_image"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        app:layout_constraintBottom_toTopOf="@id/btn_get_ticket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/volkswagen" />

    <Button
        android:id="@+id/btn_get_ticket"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:backgroundTint="@color/coarchoal"
        android:text="@string/get_ticket"
        app:icon="@drawable/ic_ticket"
        app:iconGravity="textStart"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_profile"
        app:layout_constraintEnd_toStartOf="@id/btn_history"
        app:layout_constraintStart_toStartOf="@id/btn_profile" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="6dp"
        android:backgroundTint="@color/coarchoal"
        android:text="@string/history"
        app:icon="@drawable/ic_chart"
        app:iconGravity="textStart"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_logout"
        app:layout_constraintEnd_toEndOf="@id/btn_logout"
        app:layout_constraintStart_toEndOf="@id/btn_get_ticket" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/coarchoal"
        android:text="@string/profile"
        app:icon="@drawable/ic_user"
        app:iconGravity="textStart"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_logout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/coarchoal"
        android:text="@string/logout"
        app:icon="@drawable/ic_logout"
        app:iconGravity="textStart"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>